# PSCustomProjects

./: README.md  pyproject.toml  run_custom_script.sh
libs/lib-x/: pyproject.toml
libs/lib-x/lib_x/: main.py
libs/logger/: pyproject.toml
libs/logger/logger/: log_handler.py
projects/cliente-wake-sample/: pyproject.toml
projects/cliente-wake-sample/cliente_wake_sample/: __main__.py
projects/cliente-wake-sample2/: pyproject.toml
projects/cliente-wake-sample2/cliente_wake_sample2/: __main__.py
